updated readme with completed tasks, added alt text to all img tags in html, completed the challenge by adding the grid and cards and updating the style.css and images to ensure that interacting with links works as described. Updated placeholder text. Debugged issues around text and background color so that website matches the theme and all text is visible.

--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,6 @@
     --headerlighter:  rgb(49, 44, 75); 
 }
 
-* {
-/* box-sizing: border-box; */
-}
-
 /* Text */
 h1, h2, h3 , h4, h5, h6 {
 font-family: 'Anton', sans-serif;
@@ -70,7 +66,6 @@ margin: 0px 15px;
   top: -2px;
 }
 
-
 /* Navigation dropdown menu */
 .dropdown-menu {
   border-color: none;
@@ -89,7 +84,6 @@ background-size: cover;
 }
 
 /* Navigation links */
-
 .customNav a {
 color: var(--gin) !important;
 }
@@ -119,6 +113,10 @@ color: var(--gin) !important;
     margin: 0;
   }
 
+  .jumbotron3 {
+    background-color: var(--blue);
+  }
+
 @media only screen and (max-width: 820px) {
   .jumbotron {
   background-color: var(--blue);
@@ -128,10 +126,16 @@ color: var(--gin) !important;
   .jumbotron2 {
   background-color: var(--gin);
   } 
+  .jumbotron3 {
+    background-color: var(--blue);
+    } 
 .jumboCopy {
   margin: 0 0 0 0 !important;
 }
 .jumboCopy2 {
+  margin: 0 0 0 !important;
+}
+.jumboCopy3 {
   margin: 0 0 0 !important;
 }
 }
@@ -145,14 +149,19 @@ color: var(--gin) !important;
   .jumbotron2 {
   background-color: var(--gin);
   } 
+  .jumbotron3 {
+    background-color: var(--blue);
+    } 
   .jumboCopy {
     margin: 0 0 0 !important;
   }
   .jumboCopy2 {
     margin: 0 0 0 !important;
   }
+  .jumboCopy3 {
+  margin: 0 0 0 !important;
 }
-
+}
 
 .jumbotron2 {
   background-color: var(--gin);
@@ -161,10 +170,6 @@ color: var(--gin) !important;
   justify-content: center;
   margin: 0;
 }
-
-/* .sectioncontent {
-  width: 70%;
-} */
 
 .jumbocopy2 {
   width: 100%;
@@ -186,6 +191,10 @@ color: var(--gin) !important;
     margin: auto;
   }
 
+  .jumbocopy3 p {
+    color: white;
+  }
+
 .display-4 {
   color:var(--heliotrope)
 }
@@ -202,25 +211,48 @@ color: var(--gin) !important;
 box-shadow: inset 0px 0px 8px var(--white), 0 0 15px var(--white);
 transition: all 0.5s ease-in-out;
 }
+
+.skills-image {
+  border: 1px solid var(--heliotrope);
+  border-radius: 50%;
+  padding: 5px;
+  width: 300px;
+  margin: 10px;
+}
+
+.skills-image:hover {
+box-shadow: inset 0px 0px 8px var(--heliotrope), 0 0 15px var(--heliotrope);
+transition: all 0.5s ease-in-out;
+}
   
   /* Cards */
-  .content {
-    padding: 50px;
-    text-align: center;
-    font-size: 1.25rem;
-    color: var(--blue);
-  }
+.content {
+  padding: 50px;
+  text-align: center;
+  font-size: 1.25rem;
+  color: var(--blue);
+}
 
-  .sectionHeading {
-    text-align: center;
-    color: var(--heliotrope);
-  }
-  .showsNear  {
-    padding: 0px 30px 30px 30px;
-  }
-  .cardContainer {
-    text-align: center;
-  }
+.sectionHeading {
+  text-align: center;
+  color: var(--heliotrope);
+}
+.mycardselection  {
+  padding: 0px 30px 30px 30px;
+}
+.cardContainer {
+  text-align: center;
+}
+
+.card-img-sec-top {
+  min-height: 200px;
+  max-height: 200px;
+}
+
+.card-text {
+  color: var(--blue) !important;
+}
+
 /* Content */
 .sideAccent {
 background: var(--heliotrope);
@@ -275,12 +307,18 @@ margin-top: 50px;
 .cardContainer {
 margin-top: 20px;
 }
+
+.card:hover {
+  box-shadow: inset 0px 0px 8px var(--heliotrope), 0 0 15px var(--heliotrope);
+  transition: all 0.5s ease-in-out;
+  border: none;
+  }
+
 .card {
 margin: 0 auto;
 }
 
 /* links and buttons */
-
 .btn {
     color: var(--gin);
     background-color: var(--bright-turquoise);
@@ -303,6 +341,35 @@ margin: 0 auto;
 }
 
 .navbar-icon2:hover {
+  transition: all 0.5s ease-in-out;
+  -webkit-filter: drop-shadow(0 0 10px rgb(255, 255, 255));
+  filter: drop-shadow(0 0 10px rgb(255, 255, 255));
+}
+
+.contact-section {
+  padding: 5%;
+}
+
+.copyrightinfo {
+  text-align: center;
+  color: var(--heliotrope);
+}
+
+.bluecardcontact {
+  background-color: var(--blue);
+  color: var(--heliotrope);
+}
+
+.contacttext {
+  color:white;
+}
+
+.contacttext a{
+  text-decoration: none;
+  color:white;
+}
+
+a:hover {
   transition: all 0.5s ease-in-out;
   -webkit-filter: drop-shadow(0 0 10px rgb(255, 255, 255));
   filter: drop-shadow(0 0 10px rgb(255, 255, 255));
